# DailyDelish

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.celery  README.md  api.http  db_schema.txt  docker-compose-prod.yml  docker-compose.yml  feed_data.py  folders_info.txt  project_structure.txt  pyproject.toml  requirements.txt  schema.yml
.next/: trace
auth/: adapters.py  models.py  serializers.py  views.py
core/: celery.py  middleware.py  settings.py  urls.py
custom_auth/: authentication.py  serializers.py  tasks.py  urls.py  views.py
custom_auth/management/: data.csv
custom_auth/migrations/: 0001_initial.py
delivery_address/: admin.py  models.py  serializers.py  urls.py  views.py
delivery_address/management/: data.csv
delivery_address/migrations/: 0001_initial.py  0002_alter_deliveryaddress_table.py  0003_alter_deliveryaddress_table.py  0004_rename_user_id_deliveryaddress_user.py  0005_alter_deliveryaddress_user.py  0006_alter_deliveryaddress_user.py
frontend/dailydelish-fe/: color_palette.txt  eslint.config.mjs  next.config.ts  package-lock.json  package.json  (+1 more)
order_details/: models.py  serializers.py  urls.py  views.py
orders/: models.py  serializers.py  tasks.py  urls.py  views.py
payment/: urls.py  views.py
product_category/: admin.py  models.py
product_variants/: models.py  serializers.py  urls.py  views.py
products/: models.py  serializers.py  urls.py  views.py
subscription_items/: apps.py  models.py  serializers.py
subscriptions/: models.py  serializers.py  urls.py  views.py
test_app/: urls.py  views.py
users/: models.py
(+88 files in other folders)
